grammar_to_ply/error_msgs.txt
  File "../programs/python/toy_programs/output_programs/errors/sum_of_positive_1errors_0_error.py", line 1
    NAME missing
               ^
SyntaxError: invalid syntax
